테트리스 기초 완료

--- a/Pages/Game.cshtml
+++ b/Pages/Game.cshtml
@@ -8,5 +8,8 @@
     <div class="text-center">
         <canvas id="game-tetris">
         </canvas>
+        <canvas id="game-tetris-next">
+
+        </canvas>
     </div>
 </body>
