테트리스 완성

--- a/Pages/Game.cshtml
+++ b/Pages/Game.cshtml
@@ -6,10 +6,10 @@
 
 <body>
     <div class="text-center">
+        <label id="game-score"></label>
         <canvas id="game-tetris">
         </canvas>
         <canvas id="game-tetris-next">
-
         </canvas>
     </div>
 </body>
